--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h1>Paletería Michoacana</h1>
     <nav>
       <ul>
-        <li><a href="paleteria_1.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="helados.html">Helados</a></li>
         <li><a href="aguas.html">Aguas</a></li>
       </ul>
